# infra-etl-pipeline

./: .gitignore  README.md  pyproject.toml  test.sh
src/: config.py  config.yaml.example  logging.py  main.py
src/elt/: extract.py  load.py  transform.py
src/etl/: extract.py  load.py  transform.py
src/services/: models.py  service_gateway.py
src/services/netbox/: client.py  exceptions.py  models.py  queries.py
src/services/netbox/endpoints/: dcim.py  graphql.py  ipam.py  tenancy.py  virtualization.py
src/services/netbox/models/: common.py  device.py  ip_address.py  model.py  site.py  tenant.py
src/services/netbox/old_models/: device.py  tenant.py  vm.py
src/services/salt/: client.py  exceptions.py  models.py
src/services/xen/: client.py  exceptions.py  models.py
src/services/xen/endpoints/: hosts.py  vbds.py  vms.py
src/tests/etl/: test_load.py  test_transform.py
src/tests/services/netbox/: test_client.py.bak  test_queries.py
src/utils/: csv.py  parse.py
