[project]
name = "infra-etl-pipeline"
version = "0.1.0"
description = "Infra ETL Pipeline to gather system data."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "python-json-logger>=3.3.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
]
